--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -142,6 +142,15 @@
   margin-top: 0;
 }
 
+.container{
+  width: 1100px;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 50px;
+}
 .backtxt
 {
 color: #003049;
@@ -156,16 +165,17 @@ margin-left: 50px;
 {
   color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
 }
 
 .summary
 {
-  width: 560px;
-  height: 600px;
-  margin-left: 200px;
-  margin-top: 20px;
+  width: fit-content;
+  height: fit-content;
+  float: left;
+  margin: auto;
+  margin-right: 50px;
 }
 .title
 {
@@ -183,34 +193,55 @@ margin-left: 50px;
   margin-top: 5px;
   margin-left: 20px;
 }
-.personalinfo
-{
-  margin-top: 50px;
-}
 
 .personalinfotxt
 {
   color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  margin-top: -25px;
-  margin-left: 20px;
+  font-size: 18px;
+  margin-top: 25px;
 }
 
 .fname
 {
   margin-left: 20px;
-  
+  margin-top: 20px;
+}
+
+.fname2
+{
+  margin-left: 20px;
+  margin-top: 10px;
+  font-size: 15px;
 }
 
 .lname
 {
-  margin-left: 70px;
+  margin-left: 170px;
+  margin-top: -67px;
+
+}
+
+.lname2
+{
+  margin-left: 170px;
+  margin-top: 10px;
+  font-size: 15px;
 }
 
 .number
 {
-  margin-left: 80px;
+  float: right;
+  margin-right: 100px;
+  margin-top: -67px;
+}
+
+.number2
+{
+  float: right;
+  margin-right: 145px;
+  margin-top: -33px;
+  font-size: 15px;
 }
 
 .addressinfo
@@ -221,30 +252,66 @@ margin-left: 50px;
 .address
 {
   margin-left: 20px;
+  margin-top: -40px;
+}
+
+.address2
+{
+  margin-left: 20px;
+  margin-top: 10px;
+  font-size: 13px;
 }
 
 .city
 {
-  margin-left: 90px;
+  margin-left: 170px;
+  margin-top: -70px;
+}
+
+.city2
+{
+  margin-left: 170px;
+  margin-top: 10px;
+  font-size: 15px;
 }
 
 .property
 {
-  margin-left: 90px;
+  float: right;
+  margin-right: 160px;
+  margin-top: -70px;
+}
+
+.property2
+{
+  float: right;
+  margin-right: 200px;
+  margin-top: -35px;
+  font-size: 15px;
 }
 
 .zipcode
 {
-  margin-left: 80px;
+  float: right;
+  margin-right: 20px;
+  margin-top: -70px;
 }
+
+.zipcode2
+{
+  float: right;
+  margin-right: 40px;
+  margin-top: -35px;
+  font-size: 15px;
+}
+
 
 .serviceinfotxt
 {
   color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  margin-top: 85px;
-  margin-left: 20px;
+  font-size: 18px;
+  margin-top: 20px;
 }
 
 .appliance
@@ -252,15 +319,42 @@ margin-left: 50px;
   margin-left: 20px;
 }
 
+.appliance2
+{
+  margin-left: 20px;
+  font-size: 15px;
+}
+
 .brand
 {
-  margin-left: 90px;
+  margin-left: 170px;
+  margin-top: -70px;
 }
+
+.brand2
+{
+  margin-left: 170px;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
 
 .unittype
 {
-  margin-left: 90px;
+  float: right;
+  margin-right: 190px;
+  margin-top: -70px;
 }
+
+.unittype2
+{
+  
+  float: right;
+  margin-right: 205px;
+  margin-top: -33px;
+  font-size: 15px;
+}
+
 
 .unitprob
 {
@@ -270,12 +364,19 @@ margin-left: 50px;
 .unitproblem
 {
   margin-left: 20px;
+  margin-top: -35px;
   
+}
+
+.unitproblem2
+{
+  margin-left: 20px;
+  font-size: 15px;
 }
 
 .datetimeinfo
 {
-  margin-top: 70px;
+  margin-top: 30px;
 }
 
 
@@ -284,9 +385,23 @@ margin-left: 50px;
   margin-left: 20px;
 }
 
+.date2
+{
+  margin-left: 20px;
+  font-size: 15px;
+}
+
 .time
 {
-  margin-left: 90px;
+  margin-left: 180px;
+  margin-top: -68px;
+}
+
+.time2
+{
+  margin-left: 180px;
+  margin-top: 10px;
+  font-size: 15px;
 }
 
 .reschedBtn
@@ -299,7 +414,7 @@ margin-left: 50px;
   font-size: 14px;
   float: right;
   margin-right: 20px;
-  margin-top: 40px;
+  margin-top: -40px;
 }
 
 .cancelBtn
@@ -314,15 +429,16 @@ margin-left: 50px;
   margin-right: 20px;
   margin-top: -30px;
 }
-
+.pending{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
 .pendingtxt
 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 23px;
   color: #F77F00;
-  float: right;
-  margin-right: 20px;
-  padding-top: 50px;
 }
 
 .pendingvector
@@ -330,19 +446,14 @@ margin-left: 50px;
   width: 230px;
   height: 250px;
   float: right;
-  margin-right: 300px;
-  padding-top: 10px;
-  
 }
 
  .payment
 {
   width: 450px;
-  height: 360px;
+  height: 100%;
   float: right;
-  margin-right: 320px;
-  margin-top: -392px;
-  
+  margin: auto;
 }
 
 .paymentinfo
@@ -356,8 +467,6 @@ margin-left: 50px;
   color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
-  margin-top: 10px;
-  margin-left: 20px;
 }
 
 .payBtn
@@ -368,9 +477,9 @@ margin-left: 50px;
   color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
-  float: right;
-  margin-right: 90px;
-  margin-top: 250px;
+  margin-left: 70px;
 }
-    
 
+thead, tbody {
+  text-align: center;
+}
