--- a/src/app/bookingsummary/bookingsummary.component.html
+++ b/src/app/bookingsummary/bookingsummary.component.html
@@ -1,125 +1,124 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
 
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-      *ngIf="isHandset$ | async">
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
+<body>
 
-    <br>
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-    <mat-nav-list class="nav-list">
-      <div class="dashboardside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-          <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
-        </mat-list-item>
-      </div>
+      <!--HEADER------------------------------------------------>
+      <mat-card class="header">
+        <div>
+          <h1 class="servicetype">{{service_appliance}} {{service_type}}</h1>
 
-      <div class="bookingside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-          <a class="booking-btn" routerLink="/booking">Book a Service</a>
-        </mat-list-item>
-      </div>
+          <button mat-stroked-button (click)="cancelRequest()" class="cancelBtn">Cancel Request</button>
+        </div>
+      </mat-card>
 
-      <div class="profileside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-          <a class="profile-btn" routerLink="/profile">Profile</a>
-        </mat-list-item>
-      </div>
+      <mat-card class="container">
 
-      <!-- <mat-list-item (click)="closeSideNav()">
-            <mat-icon class="nav-icon" aria-hidden="false" aria-label="">credit_card</mat-icon>
-            <a class="nav-btn" routerLink="/payment">Payment</a>
-          </mat-list-item> -->
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
+        <!--REQUEST SUMMARY------------------------------------------------>
+        <mat-card class="summary">
+          <div>
+            <mat-icon class="icon">description<h1 class="title">Request Summary</h1>
+            </mat-icon>
+          </div>
 
-    <mat-toolbar>
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-    </mat-toolbar>
+          <h1 class="personalinfotxt">Personal Information</h1>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Contact Number</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>{{service_firstname}}</td>
+                <td>{{service_lastname}}</td>
+                <td>{{service_phoneNumber}}</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th>Address</th>
+                <th>City</th>
+                <th>Property Type</th>
+                <th>Zip Code</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>{{service_address}}</td>
+                <td>{{service_city}}</td>
+                <td>{{service_property_type}}</td>
+                <td>{{service_zipcode}}</td>
+              </tr>
+            </tbody>
+          </table>
 
-    <!--HEADER------------------------------------------------>
-    <mat-card class="header">
-      <div>
-        <h1 class="servicetype">{{service_appliance}} {{service_type}}</h1>
+          <h1 class="serviceinfotxt">Service Information</h1>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Appliance</th>
+                <th>Brand</th>
+                <th>Unit Type</th>
+                <th>Unit Problem</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>{{service_appliance}}</td>
+                <td>{{service_brand}}</td>
+                <td>{{service_unitType}}</td>
+                <td>{{service_unitProb}}</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th>Scheduled Date</th>
+                <th>Time Slot</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>{{service_date | date:"MM/dd/YYYY"}}</td>
+                <td>{{service_timeslot}}</td>
+              </tr>
+            </tbody>
+          </table>
 
-        <button mat-stroked-button class="cancelBtn">Cancel Request</button>
-      </div>
-    </mat-card>
-    
-    <!-- pag isahin mo nalang sigurong card simula dito pababa? para nasa loob lahat sila ng isang card pero separate
-    pa din ng card yung summary, payment  -->
+          <div>
+            <button mat-stroked-button class="reschedBtn">Reschedule Request</button>
+          </div>
 
-    <div>
-      <img class="pendingvector" mat-card-image src="../../assets/pendingvector.png">
-    </div>
+          <!--PAYMENT SUMMARY------------------------------------------------>
+        </mat-card>
+        <div>
 
-    <div>
-      <h1 class="pendingtxt">Your request is pending</h1>
-    </div>
+          <div>
+            <div class="pending">
+              <img class="pendingvector" mat-card-image src="../../assets/pendingvector.png">
+              <h1 class="pendingtxt">Your request is pending</h1>
+            </div>
+          </div>
 
-    <!--REQUEST SUMMARY------------------------------------------------>
-    <mat-card class="summary">
-      <div>
-        <mat-icon class="icon">description<h1 class="title">Request Summary</h1>
-        </mat-icon>
-      </div>
-      <!--PERSONAL INFO------------------------------------------------>
-      <div class="personalinfo">
-        <h1 class="personalinfotxt">Personal Information</h1>
-        <label class="fname">First Name <br>{{service_firstname}}</label>
-        <label class="lname">Last Name <br>{{service_lastname}}</label>
-        <label class="number">Contact Number <br> {{service_phoneNumber}}</label>
-      </div>
+          <div>
+            <mat-card class="payment">
+              <div>
+                <h1 class="paymentinfotxt">Payment Summary</h1>
+                <label class="appliance">Appliance</label>
+              </div>
+              <div>
+                <button mat-raised-button class="payBtn">Pay Now</button>
+              </div>
+            </mat-card>
+          </div>
 
-      <div class="addressinfo">
-        <label class="address">Address <br>{{service_address}}</label>
-        <label class="city">City<br> {{service_city}}</label>
-        <label class="property">Property Type <br>{{service_property_type}}</label>
-        <label class="zipcode">Zip Code <br>{{service_zipcode}}</label>
-      </div>
-
-      <!--SERVICE INFO------------------------------------------------>
-      <div class="serviceinfo">
-        <h1 class="serviceinfotxt">Service Information</h1>
-        <label class="appliance">Appliance <br>{{service_aptype}}</label>
-        <label class="brand">Brand <br>{{service_brand}}</label>
-        <label class="unittype">Unit Type <br>{{service_unitType}} </label>
-      </div>
-
-      <div class="unitprob">
-        <label class="unitproblem">Unit Problem <br>{{service_unitProb}}</label>
-      </div>
-      <!--DATE INFO------------------------------------------------>
-      <div class="datetimeinfo">
-
-        <label class="date">Scheduled Date <br>{{service_date | date:"MM/dd/YYYY"}}</label>
-        <label class="time">Time Slot <br>{{service_timeslot}}</label>
-      </div>
-
-      <div>
-        <button mat-stroked-button class="reschedBtn">Reschedule Request</button>
-      </div>
-    </mat-card>
-
-
-    <!--PAYMENT SUMMARY------------------------------------------------>
-    <mat-card class="payment">
-      <div class="paymentinfo">
-        <h1 class="paymentinfotxt">Payment Summary</h1>
-        <label class="appliance">Appliance</label>
-      </div>
-
-      <div>
-        <button mat-raised-button class="payBtn">Pay Now</button>
-      </div>
-    </mat-card>
+        </div>
+      </mat-card>
+</body>
