--- a/src/app/profileform/profileform.component.html
+++ b/src/app/profileform/profileform.component.html
@@ -1,126 +1,115 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-      *ngIf="isHandset$ | async">
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
-    <br>
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-    <mat-nav-list class="nav-list">
-      <div class="dashboardside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-          <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
-        </mat-list-item>
-      </div>
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+    <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+  </button>
+        <br>
 
-      <div class="bookingside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-          <a class="booking-btn" routerLink="/booking">Book a Service</a>
-        </mat-list-item>
-      </div>
+        <mat-nav-list class="nav-list">
 
-      <div class="profileside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-          <a class="profile-btn" routerLink="/profile">Profile</a>
-        </mat-list-item>
-      </div>
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
 
-      <div class="logoutside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon">exit_to_app</mat-icon>
-          <a class="logout-btn" (click)="logout()">Logout</a>
-        </mat-list-item>
-      </div>
-    </mat-nav-list>
-  </mat-sidenav>
 
-  <mat-sidenav-content>
+            <div class="dashboardside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn" routerLink="/dashboard">Home</a>
+                </mat-list-item>
+            </div>
+            <div class="bookingside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
+                    <a class="booking-btn" routerLink="/booking">Book a Service</a>
+                </mat-list-item>
+            </div>
+            <div class="profileside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn" routerLink="/profile">Profile</a>
+                </mat-list-item>
+            </div>
+
+            <div class="logoutside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon">exit_to_app</mat-icon>
+                    <a class="logout-btn" (click)="logout()">Logout</a>
+                </mat-list-item>
+            </div>
+
+        </mat-nav-list>
+    </mat-sidenav>
+
     <mat-toolbar>
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <h1 class="ayosgamit">Ayosgamit</h1>
-      <span class="spacer"></span>
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
+
+        <h1 class="title">Profile Settings</h1>
     </mat-toolbar>
-    <!-- put the content below -->
-    <div>
-      <h1>Profile Settings</h1>
-    </div>
+
 
     <mat-card class="infocard">
-      <div>
-        <button class="editbtn" mat-raised-button routerLink="/edit_profile">Edit</button>
-      </div>
-      <div>
-        <h3 class="name">{{fname}} {{lname}}</h3>
-      </div>
-
-      <div>
-        <div class="row">
-          <div class="col-12">
-            <p class="mt-2">
-              <mat-icon class="mail_icon">mail</mat-icon>
-              <label class="mail">{{email}}</label>
-            </p>
-          </div>
-          <div class="col-12">
-            <p class="mt-2">
-              <mat-icon class="mail_icon">call</mat-icon>
-              <label class="mail">{{number}}</label>
-            </p>
-          </div>
-          <div class="col-12">
-            <p class="mt-2">
-              <mat-icon class="mail_icon">lock</mat-icon>
-              <label class="mail"><a href="/change_password">
-                Change password?
-              </a>
-            </label>
-            </p>
-          </div>
-
-          <div class="col-12">
-            <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
-          </div>
+        <div>
+            <mat-icon class="editicon" routerLink="/edit_profile">edit</mat-icon>
         </div>
-      </div>
+        <div>
+            <h3 class="name">{{fname}} {{lname}}</h3>
+        </div>
+
+        <div>
+            <div class="row">
+                <div class="col-12">
+                    <p class="mt-2">
+                        <mat-icon class="mail_icon">mail</mat-icon>
+                        <label class="mail">{{email}}</label>
+                    </p>
+                </div>
+                <div class="col-12">
+                    <p class="mt-2">
+                        <mat-icon class="mail_icon">call</mat-icon>
+                        <label class="mail">{{number}}</label>
+                    </p>
+                </div>
+                <div class="col-12">
+                    <p class="mt-2">
+                        <mat-icon class="mail_icon">lock</mat-icon>
+                        <label class="mail"><a href="/change_password">Change password?</a></label>
+                    </p>
+                </div>
+
+                <div class="col-12">
+                    <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
+                </div>
+            </div>
+        </div>
     </mat-card>
 
     <mat-card class="addresscard">
-      <div>
-        <button class="editbtn" mat-raised-button routerLink="/edit_address">Edit</button>
-      </div>
-      <div>
-        <h3>Address Details</h3>
-      </div>
-
-      <div>
-        <div class="row">
-          <div class="col-12">
-            <p class="paper-label">Service Address</p>
-            <p class="mt-2">{{address}}</p>
-          </div>
-          <div class="col-12">
-            <p class="paper-label">Service Address Details (Unit No., Block/Lot No., Bldg./Tower)</p>
-            <p class="mt-2">{{addressDetails}}</p>
-          </div>
-          <div class="col-12">
-            <p class="paper-label">Property type</p>
-            <p class="mt-2">{{property_type}}</p>
-          </div>
-
-          <div class="col-12">
-            <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
-          </div>
+        <div>
+            <mat-icon class="editicon" routerLink="/edit_address">edit</mat-icon>
         </div>
-      </div>
+        <div>
+            <h3>Address Details</h3>
+        </div>
+
+        <div>
+            <div class="row">
+                <div class="col-12">
+                    <p class="paper-label">Service Address</p>
+                    <p class="mt-2">{{address}}</p>
+                </div>
+                <div class="col-12">
+                    <p class="paper-label">Service Address Details (Unit No., Block/Lot No., Bldg./Tower)</p>
+                    <p class="mt-2">{{addressDetails}}</p>
+                </div>
+                <div class="col-12">
+                    <p class="paper-label">Property type</p>
+                    <p class="mt-2">{{property_type}}</p>
+                </div>
+
+                <div class="col-12">
+                    <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
+                </div>
+            </div>
+        </div>
     </mat-card>
-
-
-  </mat-sidenav-content>
-</mat-sidenav-container>
